Closed
Bug 1159465
Opened 10 years ago
Closed 10 years ago
Always make cross-compartment assertions for Object->Object edges
Categories
(Core :: JavaScript: GC, defect)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
mozilla40
Tracking | Status | |
---|---|---|
firefox40 | --- | fixed |
People
(Reporter: terrence, Assigned: terrence)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
5.49 KB,
patch
|
jonco
:
review+
|
Details | Diff | Splinter Review |
We appear to have this assertion in the most common traversal path. This patch moves that assertion into traverse to tighten the check for all object->object from zone to compartment and to simplify processMarkStackTop some.
Attachment #8598918 -
Flags: review?(jcoppeard)
Assignee | ||
Comment 1•10 years ago
|
||
Comment 2•10 years ago
|
||
Comment on attachment 8598918 [details] [diff] [review]
12_add_compartment_assertions_for_objects-v0.diff
Review of attachment 8598918 [details] [diff] [review]:
-----------------------------------------------------------------
Yes, good idea.
Attachment #8598918 -
Flags: review?(jcoppeard) → review+
Comment 4•10 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in
before you can comment on or make changes to this bug.
Description
•