Bug 1159465 - Automatically check for cross-compartment edges between objects when marking; r=jonco

--HG--
extra : rebase_source : b6191336dc263e812a5cd0112b32084220e60506